# rupture-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
configs/: daily.toml  default.toml  intraday.toml  tiny.toml
examples/: run_default.sh  run_spy_2008.sh
scripts/: plot_results.py
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/features/: accel.rs  mod.rs  normalise.rs  returns.rs
src/io/: mod.rs  read_csv.rs  write_csv.rs  write_json.rs
src/model/: capacity.rs  combine.rs  engine.rs  memory.rs  mod.rs  residuals.rs  state_machine.rs
src/preprocess/: clean.rs  mod.rs  validate.rs
src/reporting/: diagnostics.rs  mod.rs  summary.rs
src/stats/: mad.rs  median.rs  mod.rs  quantile.rs  robust.rs  rolling_window.rs
tests/: memory_kernel.rs  rolling_stats.rs  smoke_cli.rs  state_machine.rs
